# Bibli

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/projet/: __init__.py
tests/: test_projet.py
