[tool.poetry]
name = "projet"
version = "0.0.0"
description = "template cookie"
authors = ["Alex CS"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
